--- a/src/iframe_test.html
+++ b/src/iframe_test.html
@@ -68,7 +68,7 @@
       let frame = document.getElementById('frame')
       let generatedCode = document.getElementById('generatedCode')
 
-      let baseUrl = 'https://mstrlaw.github.io'
+      let baseUrl = ''
       let src = `${ baseUrl }?backgroundColor=${ bg }&borderColor=${ border }`
       
       frame.setAttribute('src', src)
